# matrix-discord-sync

./: .env.example  .flake8  .gitignore  Cargo.toml  LICENSE  README.md  base-config.yaml  maubot.yaml  requirements.txt
matrix_discord_sync/: __init__.py  db.py  discord_watcher.py  matrix_discord_snyc.py  util.py
src/: discord.rs  main.rs  matrix.rs
